--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@monaco-editor/react": "^4.4.6",
     "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -10,12 +11,14 @@
     "axios": "^0.26.1",
     "clsx": "^1.2.1",
     "firebase": "^9.9.3",
+    "monaco-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "react-stars": "^2.2.5",
     "react-toastify": "^9.0.8",
     "redux": "^4.1.2",
@@ -31,7 +34,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://nolojia-backend.onrender.com",
+  "proxy": "http://localhost:3001/",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -51,6 +54,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.3.0"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "react-router-dom": "^6.3.0",
+    "tailwindcss": "^3.2.4"
   }
 }
