--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001/",
+  "proxy": "https://nolojia-backend.onrender.com/",
   "eslintConfig": {
     "extends": [
       "react-app",
