change .env +sidebar active

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_RAPID_API_URL = https://nolojia-frontend.pages.dev
-REACT_APP_RAPID_API_HOST = judge0-ce.p.rapidapi.com
+REACT_APP_RAPID_API_URL = https://judge0-ce.p.rapidapi.com/submissions
+REACT_APP_RAPID_API_HOST = https://judge0-ce.p.rapidapi.com
 REACT_APP_RAPID_API_KEY = 82179f31c8mshefb696237510a54p183fbdjsn9d19d6a67404
